--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.2</version>
+            <version>2.9.0</version>
         </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
@@ -37,12 +36,17 @@
                 <version>1.18.24</version>
                 <scope>provided</scope>
             </dependency>
-
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
             <version>10.2.1.jre8</version>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.ugeojson</groupId>
+            <artifactId>ultimate-geojson</artifactId>
+            <version>0.0.1</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
