--- a/pom.xml
+++ b/pom.xml
@@ -42,12 +42,12 @@
             <version>10.2.1.jre8</version>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>org.ugeojson</groupId>
-            <artifactId>ultimate-geojson</artifactId>
-            <version>0.0.1</version>
-            <scope>compile</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.ugeojson</groupId>-->
+<!--            <artifactId>ultimate-geojson</artifactId>-->
+<!--            <version>0.0.1</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
