all radiuses added, clean up code, result class model added

--- a/src/main/resources/application.json
+++ b/src/main/resources/application.json
@@ -1,6 +1,6 @@
 {
-  "latitude": "51.10",
-  "longitude": "10.10",
-  "yield": "1",
-  "airburst": "false"
+  "latitude": "51.06",
+  "longitude": "17.02",
+  "yield": "370",
+  "airburst": "true"
 }
