--- a/src/main/resources/application.json
+++ b/src/main/resources/application.json
@@ -1,6 +1,6 @@
 {
   "latitude": "51.06",
   "longitude": "17.02",
-  "yield": "370",
-  "airburst": "true"
+  "yield": "1300",
+  "airburst": "false"
 }
